--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,12 @@
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "program": "${file}"
+            "program": "${file}",
+            "args": [
+                "三轮车",
+                "20",
+                "1"
+            ]
         },
         {
             "name": "Python: Attach",
